# fink-backend

./: .dockerignore  .env.example  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml
app/: main.py
app/alertas/: __init__.py
app/alertas/api/: __init__.py  routes.py  schemas.py
app/alertas/domain/: __init__.py  alerta.py
app/alertas/mappers/: __init__.py  alerta_mapper.py
app/alertas/persistence/: __init__.py  alerta_orm.py
app/alertas/repositories/: __init__.py  alerta_repository.py  alerta_repository_impl.py
app/alertas/schemas/: __init__.py
app/alertas/services/: __init__.py  alerta_service.py
app/api/: deps.py  pluggy_routes.py
app/api/v1/: routes.py
app/comercial/: __init__.py
app/comercial/api/: __init__.py  assinatura_routes.py  assinatura_schema.py  plano_routes.py  plano_schema.py  solicitacao_pagamento_routes.py  solicitacao_pagamento_schema.py  tipo_pagamento_routes.py  tipo_pagamento_schema.py
app/comercial/domain/: __init__.py  assinatura.py  plano.py  solicitacao_pagamento.py  tipo_pagamento.py
app/comercial/mappers/: __init__.py  assinatura_mapper.py  plano_mapper.py  solicitacao_pagamento_mapper.py  tipo_pagamento_mapper.py
app/comercial/persistence/: __init__.py  assinatura_orm.py  plano_orm.py  solicitacao_pagamento_orm.py  tipo_pagamento_orm.py
app/comercial/repositories/: __init__.py  assinatura_repository.py  assinatura_repository_impl.py  plano_repository.py  plano_repository_impl.py  solicitacao_pagamento_repository.py  (+3 more)
app/core/: logging.py  settings.py
app/db/: __init__.py  base.py  models.py  models_imports.py  session.py
app/identidade/: __init__.py
app/metas/: __init__.py
app/metas/api/: routes.py  (+2 more)
app/providers/: pluggy_client.py
app/repositories/: transaction_repository.py
app/schemas/: common.py  transaction.py
app/shared/: __init__.py  database.py  models_imports.py  seed.py  transaction_service.py
docs/: REFACTORING.md
migrations/: env.py
migrations/versions/: 085059e62f7a_init.py  20250101_change_pessoa_id_to_uuid.py  20250115_add_movimentacao_meta.py  20250116_refactor_alerta.py  20251122_remove_server_defaults_meta.py  20251125_rename_descricao_to_categoria.py
scripts/: add_docstrings.py
tests/: test_health.py
(+69 files in other folders)
